--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,6 @@
-server:
-  port: 8765
-
 spring:
   application:
     name: api-gateway
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
-
-eureka:
-  client:
-    service-url:
-#      defaultZone: http://localhost:8761/eureka
-      defaultZone: http://eureka-server:8761/eureka # for docker
+  config:
+#    import: configserver:http://localhost:8888
+    import: configserver:http://config-server:8888 # for docker
